# advent-of-code-2023

./: CMakeLists.txt
day1/: CMakeLists.txt  task1.cpp  task2.cpp
day10/: CMakeLists.txt  task.cpp
day11/: CMakeLists.txt  task.cpp
day2/: CMakeLists.txt  task1.cpp
day3/: CMakeLists.txt  part1.cpp
day4/: CMakeLists.txt  task.cpp
day5/: CMakeLists.txt  part2.cpp  task.cpp
day6/: CMakeLists.txt  task.cpp
day7/: CMakeLists.txt  task.cpp
day8/: CMakeLists.txt  task.cpp  task2.cpp
day9/: CMakeLists.txt  task.cpp  test_data_2.txt
inc/: args.hpp  trie.hpp
